benchmarks/c/pregen/re2c/submatch_10__alt1_2.cc
/* Generated by re2c */
#line 1 "../../../benchmarks/c/src/re2c/submatch_10__alt1_2.re"
#include "re2c/base.h"

namespace re2c_submatch_10__alt1_2 {

#line 17 "../../../benchmarks/c/src/re2c/submatch_10__alt1_2.re"


#line 1 "../../../benchmarks/c/src/re2c/base.re"
#line 11 "../../../benchmarks/c/src/re2c/base.re"


struct input_t {
    FILE* file;
    char *buf;
    char *lim;
    char *cur;
    char *mar;
    char *tok;
    
#line 23 "gen/re2c/submatch_10__alt1_2.cc"
char *yyt1;
char *yyt2;
char *yyt3;
char *yyt4;
#line 20 "../../../benchmarks/c/src/re2c/base.re"

    
#line 31 "gen/re2c/submatch_10__alt1_2.cc"
#line 21 "../../../benchmarks/c/src/re2c/base.re"

    taglistpool_t tlp;
    int eof;
};

static inline void taglistpool_clear(taglistpool_t *tlp, input_t *in) {
    tlp->next = tlp->head;
    
#line 41 "gen/re2c/submatch_10__alt1_2.cc"
#line 28 "../../../benchmarks/c/src/re2c/base.re"

}

static inline void taglistpool_init(taglistpool_t *tlp) {
    static const unsigned size = 1024 * 1024;
    tlp->head = (taglist_t*)malloc(size * sizeof(taglist_t));
    tlp->next = tlp->head;
    tlp->last = tlp->head + size;
}

static inline void taglistpool_free(taglistpool_t *tlp) {
    free(tlp->head);
    tlp->head = tlp->next = tlp->last = NULL;
}

static inline void taglist(taglist_t **ptl, const char *b, const char *t, taglistpool_t *tlp) {
#ifdef GROW_MTAG_LIST
    if (tlp->next >= tlp->last) {
        const unsigned size = tlp->last - tlp->head;
        taglist_t *head = (taglist_t*)malloc(2 * size * sizeof(taglist_t));
        memcpy(head, tlp->head, size * sizeof(taglist_t));
        free(tlp->head);
        tlp->head = head;
        tlp->next = head + size;
        tlp->last = head + size * 2;
    }
#else
    assert(tlp->next < tlp->last);
#endif
    taglist_t *tl = tlp->next++;
    tl->pred = *ptl;
    tl->dist = t - b;
    *ptl = tl;
}

static inline void free_input(input_t *in) {
    free(in->buf);
    taglistpool_free(&in->tlp);
    fclose(in->file);
}

#line 74 "../../../benchmarks/c/src/re2c/base.re"


#line 79 "../../../benchmarks/c/src/re2c/base.re"


#line 90 "gen/re2c/submatch_10__alt1_2.cc"
#define YYMAXFILL 2
#line 81 "../../../benchmarks/c/src/re2c/base.re"


static inline int fill_eofrule(input_t *in) {
    size_t free;
    if (in->eof) return 1;

    free = in->tok - in->buf;
    assert(free > 0);

    memmove(in->buf, in->tok, in->lim - in->tok);
    in->lim -= free;
    in->cur -= free;
    in->mar -= free;
    in->tok -= free;
    
#line 108 "gen/re2c/submatch_10__alt1_2.cc"
if (in->yyt1) in->yyt1 -= free;
if (in->yyt2) in->yyt2 -= free;
if (in->yyt3) in->yyt3 -= free;
if (in->yyt4) in->yyt4 -= free;
#line 95 "../../../benchmarks/c/src/re2c/base.re"


    in->lim += fread(in->lim, 1, free, in->file);
    in->lim[0] = 0;

    if (in->lim < in->buf + SIZE) {
        in->eof = 1;
    }

    return 0;
}

static inline int fill_padding(input_t *in, size_t need) {
    size_t free;
    if (in->eof) return 1;

    free = in->tok - in->buf;
    assert(free >= need);

    memmove(in->buf, in->tok, in->lim - in->tok);
    in->lim -= free;
    in->cur -= free;
    in->mar -= free;
    in->tok -= free;
    
#line 139 "gen/re2c/submatch_10__alt1_2.cc"
if (in->yyt1) in->yyt1 -= free;
if (in->yyt2) in->yyt2 -= free;
if (in->yyt3) in->yyt3 -= free;
if (in->yyt4) in->yyt4 -= free;
#line 119 "../../../benchmarks/c/src/re2c/base.re"


    in->lim += fread(in->lim, 1, free, in->file);

    if (in->lim < in->buf + SIZE) {
        in->eof = 1;
        memset(in->lim, 0, YYMAXFILL);
        in->lim += YYMAXFILL;
    }

    return 0;
}

static inline void init_input_eofrule(input_t *in, const char* fname) {
    in->file = fopen(fname, "rb");
    in->buf = (char*) malloc(SIZE + 1);
    in->lim = in->buf + SIZE;
    in->cur = in->lim;
    in->mar = in->lim;
    in->tok = in->lim;
    
#line 166 "gen/re2c/submatch_10__alt1_2.cc"
in->yyt1 = 0;
in->yyt2 = 0;
in->yyt3 = 0;
in->yyt4 = 0;
#line 139 "../../../benchmarks/c/src/re2c/base.re"

    
#line 174 "gen/re2c/submatch_10__alt1_2.cc"
#line 140 "../../../benchmarks/c/src/re2c/base.re"

    taglistpool_init(&in->tlp);
    in->eof = 0;
    fill_eofrule(in);
}

static inline void init_input_padding(input_t *in, const char* fname) {
    in->file = fopen(fname, "rb");
    in->buf = (char*) malloc(SIZE + YYMAXFILL);
    in->lim = in->buf + SIZE;
    in->cur = in->lim;
    in->mar = in->lim;
    in->tok = in->lim;
    
#line 190 "gen/re2c/submatch_10__alt1_2.cc"
in->yyt1 = 0;
in->yyt2 = 0;
in->yyt3 = 0;
in->yyt4 = 0;
#line 153 "../../../benchmarks/c/src/re2c/base.re"

    
#line 198 "gen/re2c/submatch_10__alt1_2.cc"
#line 154 "../../../benchmarks/c/src/re2c/base.re"

    taglistpool_init(&in->tlp);
    in->eof = 0;
}

int lex_yyfill_eofrule(input_t *in) {
    long count = 0;
    
#line 208 "gen/re2c/submatch_10__alt1_2.cc"
const char* a1;const char* a2;const char* b1;const char* b2;
#line 161 "../../../benchmarks/c/src/re2c/base.re"

    
#line 213 "gen/re2c/submatch_10__alt1_2.cc"
#line 162 "../../../benchmarks/c/src/re2c/base.re"

loop:
    in->tok = in->cur;
    
#line 219 "gen/re2c/submatch_10__alt1_2.cc"
{
	char yych;
yyFillLabel0:
	yych = *in->cur;
	switch (yych) {
		case '\n':
			in->yyt1 = in->cur;
			in->yyt2 = in->cur;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			goto yy3;
		case 'a':
			in->yyt1 = in->cur;
			goto yy4;
		case 'b':
			in->yyt4 = in->cur;
			goto yy5;
		default:
			if (in->lim <= in->cur) {
				if (fill_eofrule(in) == 0) goto yyFillLabel0;
				goto yy9;
			}
			goto yy1;
	}
yy1:
	++in->cur;
yy2:
#line 6 "../../../benchmarks/c/src/re2c/submatch_10__alt1_2.re"
	{ return -1; }
#line 249 "gen/re2c/submatch_10__alt1_2.cc"
yy3:
	++in->cur;
	a1 = in->yyt1;
	a2 = in->yyt2;
	b1 = in->yyt4;
	b2 = in->yyt3;
#line 11 "../../../benchmarks/c/src/re2c/submatch_10__alt1_2.re"
	{
        if (a1)      { OUTC('A'); OUTS(a1, a2); }
        else if (b1) { OUTC('B'); OUTS(b1, b2); }
        OUTC('\n');
        goto loop;
    }
#line 263 "gen/re2c/submatch_10__alt1_2.cc"
yy4:
	in->mar = ++in->cur;
yyFillLabel1:
	yych = *in->cur;
	switch (yych) {
		case '\n':
			in->yyt2 = in->cur;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			goto yy3;
		case 'a': goto yy6;
		default:
			if (in->lim <= in->cur) {
				if (fill_eofrule(in) == 0) goto yyFillLabel1;
			}
			goto yy2;
	}
yy5:
	in->mar = ++in->cur;
yyFillLabel2:
	yych = *in->cur;
	switch (yych) {
		case '\n':
			in->yyt1 = NULL;
			in->yyt2 = NULL;
			in->yyt3 = in->cur;
			goto yy3;
		case 'b': goto yy8;
		default:
			if (in->lim <= in->cur) {
				if (fill_eofrule(in) == 0) goto yyFillLabel2;
			}
			goto yy2;
	}
yy6:
	++in->cur;
yyFillLabel3:
	yych = *in->cur;
	switch (yych) {
		case '\n':
			in->yyt2 = in->cur;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			goto yy3;
		case 'a': goto yy6;
		default:
			if (in->lim <= in->cur) {
				if (fill_eofrule(in) == 0) goto yyFillLabel3;
			}
			goto yy7;
	}
yy7:
	in->cur = in->mar;
	goto yy2;
yy8:
	++in->cur;
yyFillLabel4:
	yych = *in->cur;
	switch (yych) {
		case '\n':
			in->yyt1 = NULL;
			in->yyt2 = NULL;
			in->yyt3 = in->cur;
			goto yy3;
		case 'b': goto yy8;
		default:
			if (in->lim <= in->cur) {
				if (fill_eofrule(in) == 0) goto yyFillLabel4;
			}
			goto yy7;
	}
yy9:
#line 73 "../../../benchmarks/c/src/re2c/base.re"
	{ return count; }
#line 338 "gen/re2c/submatch_10__alt1_2.cc"
}
#line 169 "../../../benchmarks/c/src/re2c/base.re"

}

int lex_yyfill_padding(input_t *in) {
    long count = 0;
    
#line 347 "gen/re2c/submatch_10__alt1_2.cc"
const char* a1;const char* a2;const char* b1;const char* b2;
#line 174 "../../../benchmarks/c/src/re2c/base.re"

    
#line 352 "gen/re2c/submatch_10__alt1_2.cc"
#line 175 "../../../benchmarks/c/src/re2c/base.re"

loop:
    in->tok = in->cur;
    
#line 358 "gen/re2c/submatch_10__alt1_2.cc"
{
	char yych;
	static const unsigned char yybm[256] = {
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,  64, 128,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0
	};
	if ((in->lim - in->cur) < 2) if (fill_padding(in, 2) != 0) return -2;
	yych = *in->cur;
	if (yych <= '\n') {
		if (yych <= 0x00) goto yy11;
		if (yych <= '\t') goto yy12;
		in->yyt1 = in->cur;
		in->yyt2 = in->cur;
		in->yyt3 = NULL;
		in->yyt4 = NULL;
		goto yy14;
	} else {
		if (yych <= '`') goto yy12;
		if (yych <= 'a') {
			in->yyt1 = in->cur;
			goto yy15;
		}
		if (yych <= 'b') {
			in->yyt4 = in->cur;
			goto yy16;
		}
		goto yy12;
	}
yy11:
	++in->cur;
#line 78 "../../../benchmarks/c/src/re2c/base.re"
	{ return count; }
#line 421 "gen/re2c/submatch_10__alt1_2.cc"
yy12:
	++in->cur;
yy13:
#line 6 "../../../benchmarks/c/src/re2c/submatch_10__alt1_2.re"
	{ return -1; }
#line 427 "gen/re2c/submatch_10__alt1_2.cc"
yy14:
	++in->cur;
	a1 = in->yyt1;
	a2 = in->yyt2;
	b1 = in->yyt4;
	b2 = in->yyt3;
#line 11 "../../../benchmarks/c/src/re2c/submatch_10__alt1_2.re"
	{
        if (a1)      { OUTC('A'); OUTS(a1, a2); }
        else if (b1) { OUTC('B'); OUTS(b1, b2); }
        OUTC('\n');
        goto loop;
    }
#line 441 "gen/re2c/submatch_10__alt1_2.cc"
yy15:
	yych = *(in->mar = ++in->cur);
	if (yybm[0+yych] & 64) goto yy17;
	if (yych == '\n') {
		in->yyt2 = in->cur;
		in->yyt3 = NULL;
		in->yyt4 = NULL;
		goto yy14;
	}
	goto yy13;
yy16:
	yych = *(in->mar = ++in->cur);
	if (yybm[0+yych] & 128) goto yy19;
	if (yych == '\n') {
		in->yyt1 = NULL;
		in->yyt2 = NULL;
		in->yyt3 = in->cur;
		goto yy14;
	}
	goto yy13;
yy17:
	++in->cur;
	if (in->lim <= in->cur) if (fill_padding(in, 1) != 0) return -2;
	yych = *in->cur;
	if (yybm[0+yych] & 64) goto yy17;
	if (yych == '\n') {
		in->yyt2 = in->cur;
		in->yyt3 = NULL;
		in->yyt4 = NULL;
		goto yy14;
	}
yy18:
	in->cur = in->mar;
	goto yy13;
yy19:
	++in->cur;
	if (in->lim <= in->cur) if (fill_padding(in, 1) != 0) return -2;
	yych = *in->cur;
	if (yybm[0+yych] & 128) goto yy19;
	if (yych == '\n') {
		in->yyt1 = NULL;
		in->yyt2 = NULL;
		in->yyt3 = in->cur;
		goto yy14;
	}
	goto yy18;
}
#line 183 "../../../benchmarks/c/src/re2c/base.re"

}

#define FN_BENCH(suffix) \
void bench_yyfill_##suffix::operator()( \
        benchmark::State &state, const char* input, long expected) const { \
    long count; \
    for (auto _ : state) { \
        input_t in; \
        init_input_##suffix(&in, input); \
        count = lex_yyfill_##suffix(&in); \
        free_input(&in); \
    } \
    if (count != expected) state.SkipWithError("error"); \
}
FN_BENCH(eofrule)
FN_BENCH(padding)
#undef FN_BENCH

#define FN_TEST(suffix) \
bool test_yyfill_##suffix(const char* input, long expected) { \
    input_t in; \
    init_input_##suffix(&in, input); \
    \
    long count = lex_yyfill_##suffix(&in); \
    switch (count) { \
    default: \
        if (count != expected) { \
            fprintf(stderr, "wrong count, expected %ld, got %ld\n", expected, count); \
        } \
        break; \
    case -1: \
        fprintf(stderr, "syntax error\n"); \
        break; \
    case -2: \
        fprintf(stderr, "yyfill error\n"); \
        break; \
    } \
    \
    free_input(&in); \
    return count == expected; \
}
FN_TEST(eofrule)
FN_TEST(padding)
#undef FN_TEST
#line 19 "../../../benchmarks/c/src/re2c/submatch_10__alt1_2.re"


} // namespace re2c_submatch_10__alt1_2
